<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/grayThird">


<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/text1"
        android:layout_marginTop="40sp"
        android:text="@string/instruction"
        android:textSize="25sp"
        android:textDirection="ltr"
        android:gravity="center"
        android:textColor="#303030"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/text2"
        android:layout_gravity="center"
        android:inputType="text"
        android:hint="@string/event_name"
        android:textColorHint="#787878"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editText1"
        android:layout_gravity="center"
        android:inputType="text"
        android:hint="@string/event_location"
        android:textColorHint="#787878"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/editText2"
            android:src="@drawable/location"
            android:background="@color/grayThird"
            android:id="@+id/locationButton"


        />

    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editText2"
        android:layout_gravity="center"
        android:inputType="text"
        android:hint="@string/event_description"
        android:textColorHint="#787878"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:clickable="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/pick_date"
            android:textColor="#303030"
            android:onClick="showDatePickerDialog"
            android:layout_weight="0.04"
            android:id="@+id/dateButton"
            android:clickable="true"
            style="@style/dugme"
            android:elevation="30dp"
            android:translationZ="30dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/pick_time"
            android:textColor="#303030"
            android:onClick="showTimePickerDialog"
            android:layout_weight="0.04"
            android:id="@+id/timeButton"
            android:clickable="true"
            style="@style/dugme"
            android:elevation="30dp"
            android:translationZ="30dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:text="@string/set_event"
            android:textColor="#303030"
            android:layout_weight="0.04"
            android:id="@+id/setEvent"
            android:onClick="setEvent"
            android:clickable="true"
            style="@style/dugme"
            android:elevation="30dp"
            android:translationZ="30dp" />

        </LinearLayout>


</LinearLayout>


</ScrollView>